[package]
name = "led-roulette"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
microbit = "0.14.0"
panic-halt = "0.2.0"
#panic-rtt-target = "0.1.3"
#rtt-target = "0.5.0"

[dev-dependencies]
# Sneak in dependencies for examples which clash with panic-hal when generating
# docs with rustdoc.
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
